@@ -174,6 +174,8 @@ public class RandomQuests extends ActiveTicker
 				{
 					try
 					{
+						if(CMProps.getBoolVar(CMProps.Bool.MUDSHUTTINGDOWN))
+							return;
 						final StringBuffer xml = Resources.getFileResource(getGeneratorXmlPath(), true);
 						if((xml==null)||(xml.length()==0))
 						{
