@@ -790,6 +790,7 @@ public interface ScriptingEngine extends CMCommon, Tickable, MsgListener
 		"NEXT", //95 JUST for catching errors...
 		"CASE", //96 JUST for catching errors...
 		"DEFAULT", //97 JUST for catching errors...
+		"MPHIT", //98
 	};
 
 	/** a list of the different parts of a time clock */
