@@ -222,6 +222,8 @@
 
             <li><a href="#mphide">mphide</a></li>
 
+            <li><a href="#mphit">mphit</a></li>
+
             <li><a href="#mpjunk">mpjunk</a></li>
 
             <li><a href="#mpkill">mpkill</a></li>
@@ -5406,6 +5408,22 @@ hidden thing to sight.</p>
       <p>EXAMPLES:</p>
 
       <pre>mphide $n<br /></pre>
+
+      <h3><a name="mphit">mphit</a></h3>
+
+      <p>Usage:</p>
+
+      <pre>mphit [victim]<br /></pre>
+
+      <p>This command causes the mob to make a single normal attack on the victim.
+  It will not cause combat, but will preserve the existing combat status of everyone 
+  involved.</p>
+
+      <p>EXAMPLES:</p>
+
+      <pre>mphit $n<br />mphit guardfour<br /></pre>
+
+      <p></p>
 
       <h3><a name="mpjunk">mpjunk</a></h3>
 
