@@ -52,6 +52,7 @@
  51. ALIAS command now supports TEST argument
  52. New races: Shrimp, Tuna
  53. New common skill: Animal Trapping, requires a cage, for trapping small game
+ 54. New Scriptable command: MPHIT, for forcing an immediate weapon attack
 
 # Build 5.9.12 Release 1/17/2022
   *. DB Changes: CMCOLR field in CMCHAR increased in size to 255 chars, CMSNAM field added to CMBKLG
